Update App.css, position fixed to solve mobile css whitespace issue

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,6 +6,7 @@
 html, body {
   margin: 0;
   padding: 0;
+  position : fixed;
   min-height: 100vh;
   height: 100vh;
   overflow-x: hidden;
